--- a/index.html
+++ b/index.html
@@ -10,13 +10,95 @@
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     </head>
-    <body>
-<div class="" id="medicalsection">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="block shadow">
+    <body background="bg-2.png">
                     <h1 class="h">Medical</h1>
+
+                    <table>
+                        <thead>
+                                <th class="table-h">S.No </th>
+                                <th class="table-h">Project Title </th>
+                                <th class="table-h">Discription</th>
+                            </tr>
+                        </thead>
+                            <tbody>
+                             <tr>
+                                <td class="table-p">01</td>
+                                <td class="table-p">Health Monitoring System</td>
+                                <td class="table-p">Develop a wearable device that monitors vital signs such as heart rate, temperature, and ECG wirelessly.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">02</td>
+                                <td class="table-p">Smart Pill Dispenser</td>
+                                <td class="table-p">Create a medication dispenser with embedded intelligence to provide timely reminders and dosage control.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">03</td>
+                                <td class="table-p">Biometric Patient Identification System</td>
+                                <td class="table-p">Implement a secure patient identification system using biometric features like fingerprint or iris recognition.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">04</td>
+                                <td class="table-p">Portable Electrocardiogram (ECG) Monitor</td>
+                                <td class="table-p">Design a compact device for real-time ECG monitoring, suitable for ambulatory patient care.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">05</td>
+                                <td class="table-p">Smart Inhaler for Asthma Management</td>
+                                <td class="table-p">Develop an inhaler with embedded sensors to track inhalation patterns and provide insights for asthma management.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">06</td>
+                                <td class="table-p">Blood Glucose Monitoring System</td>
+                                <td class="table-p">Design a portable device for monitoring blood glucose levels, offering a convenient solution for diabetic patients.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">07</td>
+                                <td class="table-p">Fall Detection and Alert System for Elderly</td>
+                                <td class="table-p">Create a system that detects falls in elderly individuals and automatically sends alerts to caregivers or emergency services.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">08</td>
+                                <td class="table-p">Telemedicine Gateway</td>
+                                <td class="table-p">Implement a secure embedded system to facilitate remote consultations and health data transmission between patients and healthcare providers.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">09</td>
+                                <td class="table-p">Automated Drug Delivery System</td>
+                                <td class="table-p">Build a system that automatically delivers precise drug dosages based on a patient's medical condition and prescribed schedule.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">10</td>
+                                <td class="table-p">Implantable Bio-sensors for Continuous Monitoring</td>
+                                <td class="table-p">Explore the development of implantable sensors for continuous monitoring of specific health parameters within the body.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">11</td>
+                                <td class="table-p">Smart Prosthetics with Embedded Sensors</td>
+                                <td class="table-p">Integrate sensors into prosthetic limbs for enhanced control and feedback, improving the user's experience.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">12</td>
+                                <td class="table-p">Neurofeedback System for Stress Management</td>
+                                <td class="table-p">Create a device that measures and provides feedback on brainwave patterns to help individuals manage stress levels.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">13</td>
+                                <td class="table-p">Sleep Monitoring and Improvement Device</td>
+                                <td class="table-p">Develop a wearable device that monitors sleep patterns and provides recommendations for improving sleep quality.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">14</td>
+                                <td class="table-p">Smart Hearing Aid</td>
+                                <td class="table-p">Design a hearing aid with embedded signal processing to enhance speech clarity and adapt to different environments.</td>
+                             </tr>
+                             <tr>
+                                <td class="table-p">15</td>
+                                <td class="table-p">Visual Prosthesis for the Visually Impaired</td>
+                                <td class="table-p">Explore the development of embedded systems to provide visual assistance for individuals with visual impairments, such as retinal prostheses.</td>
+                             </tr>
+                            </tbody>
+                    </table>
+
                     <ul class="list">
                         <li><b> Health Monitoring System:</b> Develop a wearable device that monitors vital signs such as heart rate, temperature, and ECG wirelessly.</li>
                         <li><b>Smart Pill Dispenser:</b> Create a medication dispenser with embedded intelligence to provide timely reminders and dosage control.</li>                            
@@ -38,6 +120,5 @@
             </div>
         </div>
     </div>
-</div>
     </body>
 </html>
