--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
                                 <td class="faculties-p">Visual Prosthesis for the Visually Impaired</td>
                                 <td class="faculties-p">Explore the development of embedded systems to provide visual assistance for individuals with visual impairments, such as retinal prostheses.</td>
                              </tr>
+                             <tr>
+                              <td class="faculties-p">16</td>
+                              <td class="faculties-p">Students Innovation</td>
+                              <td class="faculties-p">Students can submit their own ideas.</td>
+                           </tr>
                             </tbody>
                     </table>
                 </div>
