--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
                             <tbody>
                              <tr>
                                 <td class="faculties-p">01</td>
-                                <td class="faculties-p">Health Monitoring System</td>
-                                <td class="faculties-p">Develop a wearable device that monitors vital signs such as heart rate, temperature, and ECG wirelessly.</td>
+                                <td class="faculties-p">Wireless Health Monitoring System</td>
+                                <td class="faculties-p"> Develop a wearable device that 
+                                 monitors vital signs such as heart rate, temperature, and ECG wirelessly.</td>
                              </tr>
                              <tr>
                                 <td class="faculties-p">02</td>
                                 <td class="faculties-p">Smart Pill Dispenser</td>
-                                <td class="faculties-p">Create a medication dispenser with embedded intelligence to provide timely reminders and dosage control.</td>
+                                <td class="faculties-p"> Create a medication dispenser with embedded 
+                                 intelligence to provide timely reminders and dosage control.</td>
                              </tr>
                              <tr>
                                 <td class="faculties-p">03</td>
@@ -103,6 +105,12 @@
                              </tr>
                              <tr>
                               <td class="faculties-p">16</td>
+                              <td class="faculties-p">Voice based virtual assistant for the blind</td>
+                              <td class="faculties-p"> Develop an AI algorithm to 
+                                 deduce a user's purpose from the spoken phrase and to implement the same.</td>
+                           </tr>
+                             <tr>
+                              <td class="faculties-p">17</td>
                               <td class="faculties-p">Students Innovation</td>
                               <td class="faculties-p">Students can submit their own ideas.</td>
                            </tr>
