--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+          <style>
+            .backbutton{
+    background-color: #ff9f00;
+    font-family: "sans-serif";
+    font-size: 24px;
+    width: 150px;
+    height: 50px;
+    border-radius: 50px;
+    margin: 20px;
+}
+          </style>
     </head>
-    <body background="bg-2.png">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
+    <body>
+      <div style="background-color: #f7f7d7">
                 <div class="block shadow">
-                    <h1 class="h text-center p-5">Medical</h1>
+                    <h1 class="h text-center p-5">HEALTH TECH</h1>
 
                     <table class="table" border="4">
                         <thead>
@@ -112,13 +121,13 @@
                              <tr>
                               <td class="faculties-p">17</td>
                               <td class="faculties-p">Students Innovation</td>
-                              <td class="faculties-p">Students can submit their own ideas.</td>
+                              <td class="faculties-p">Students can submit their own ideas of their intrest.</td>
                            </tr>
                             </tbody>
                     </table>
+
+                    <button class="backbutton">BACK</button>
                 </div>
-            </div>
-        </div>
-    </div>
+               </div>
     </body>
 </html>
