--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                             </tbody>
                     </table>
 
-                    <button class="backbutton">BACK</button>
+                    <button class="backbutton"><a href="https://dharun789.github.io/theme/" target="_blank">
+                     BACK</a></button>
                 </div>
                </div>
     </body>
