--- a/index.html
+++ b/index.html
@@ -10,19 +10,30 @@
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
           <style>
-            .backbutton{
-    background-color: #ff9f00;
-    font-family: "sans-serif";
-    font-size: 24px;
-    width: 150px;
-    height: 50px;
-    border-radius: 50px;
-    margin: 20px;
-}
+            .button {
+            font-family: "sans-serif";
+            font-size: 24px;
+            width: 200px;
+            height: 80px;
+            border-radius: 50px;
+            color: white;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: black;
+            }
+            button:hover{
+                letter-spacing: 3px;
+                background-color: #ff9f00;
+                color: aliceblue;
+                box-shadow: #ff9f00 0px 7px 29px 0px;
+            }
+
+            button:active{
+                transform: translateY(10px);
+            }
           </style>
     </head>
     <body>
-      <div style="background-color: #f7f7d7">
+      <div style="background-image: radial-gradient(#fff, #fe9090);">
                 <div class="block shadow">
                     <h1 class="h text-center p-5">HEALTH TECH</h1>
 
@@ -126,7 +137,7 @@
                             </tbody>
                     </table>
 
-                    <button class="backbutton"><a href="https://dharun789.github.io/theme/" target="_blank">
+                    <button class="button"><a href="https://dharun789.github.io/theme/" target="_blank">
                      BACK</a></button>
                 </div>
                </div>
